fixed gap issue  on hover

--- a/assets/css/scss/_admin.scss
+++ b/assets/css/scss/_admin.scss
@@ -583,8 +583,8 @@ body {
 
 				.evf-admin-grid {
 					background: $color-white;
-					margin: 15px;
-					padding: 5px;
+					margin: 10px;
+					padding: 10px;
 					border: 1px solid transparent;
 					transition: 0.5s border, 0.5s background-color;
 					position: relative;
